Implemented browser cache control as an extension of the server cache control, using HTTP headers ETag and If-None-Match.
Refactored code to save data to file safely. Now code is in FileUtil utility file.

Added striped concurrency control.