@@ -1,11 +1,13 @@
 package stroom.dashboard.impl.visualisation;
 
+import stroom.util.io.FileUtil;
 import stroom.util.io.PathCreator;
 import stroom.util.logging.LambdaLogger;
 import stroom.util.logging.LambdaLoggerFactory;
 import stroom.util.shared.IsServlet;
 import stroom.util.shared.PermissionException;
 
+import com.google.common.util.concurrent.Striped;
 import jakarta.inject.Inject;
 import jakarta.inject.Provider;
 import jakarta.inject.Singleton;
@@ -26,15 +28,28 @@ import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.SimpleFileVisitor;
-import java.nio.file.StandardCopyOption;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.time.Instant;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.locks.Lock;
 
 /**
  * Allows access to the visualisation assets over HTTP, so that the UI can pull in assets as necessary.
+ * <p>
+ * Implementation notes:
+ * <li>
+ *     <li>
+ *         The Servlet has a cache so it doesn't pull large files out of the database
+ *         for every request. The client is always served from the file in the cache.
+ *     </li>
+ *     <li>
+ *         The cache file is created if it is out of date by streaming the file from the database.
+ *         The date of the asset is held in the database, and the same timestamp is held in
+ *     </li>
+ * </li>
+ * </p>
  */
 @Singleton
 public class VisualisationAssetServlet extends HttpServlet implements IsServlet {
@@ -56,6 +71,21 @@ public class VisualisationAssetServlet extends HttpServlet implements IsServlet 
     /** Name of metadata directory within each document's cache */
     private static final String METADATA_DIR = ".meta";
 
+    /** Name of the cache control header */
+    private static final String CACHE_CONTROL_HEADER = "Cache-Control";
+
+    /** Value of the cache control header. Asks browser to revalidate after 2s. */
+    private static final String CACHE_CONTROL_VALUE_2S = "max-age=2, must-revalidate";
+
+    /** Name of the header in request from client to see if cache is valid */
+    private static final String ETAG_VALID_HEADER = "If-None-Match";
+
+    /** Name of the header in response that says whether the cache is valid */
+    private static final String ETAG_HEADER = "ETag";
+
+    /** Number of locks to use to control access to the cache */
+    private static final int NUMBER_OF_LOCKS = 1024;
+
     /** The service that provides the backend to this servlet */
     private final VisualisationAssetService service;
 
@@ -70,6 +100,9 @@ public class VisualisationAssetServlet extends HttpServlet implements IsServlet 
 
     /** Whether we're wiping the cache on startup */
     private final boolean clearAssetCacheOnStartup;
+
+    /** Google utility for creating striped locks from hashed paths */
+    private final Striped<Lock> locks = Striped.lazyWeakLock(NUMBER_OF_LOCKS);
 
     @Inject
     public VisualisationAssetServlet(final VisualisationAssetService service,
@@ -99,8 +132,9 @@ public class VisualisationAssetServlet extends HttpServlet implements IsServlet 
      * @param docId Document ID of the document that owns the assets. Must not be null.
      * @return The path to the root of the cache for that document. Probably doesn't exist on disk.
      */
-    private Path getCachePathForDoc(final String docId) {
-        return assetCacheDir.resolve(makePathSafe(docId));
+    private Path getCachePathForDoc(final String docId) throws IOException {
+        checkPathIsSafe(assetCacheDir, docId);
+        return assetCacheDir.resolve(docId);
     }
 
     /**
@@ -110,84 +144,75 @@ public class VisualisationAssetServlet extends HttpServlet implements IsServlet 
      * @return Path to the asset. May not exist on disk.
      */
     private Path getCachePathForAsset(final String docId,
-                                      final String assetPath) {
-        return getCachePathForDoc(docId).resolve(makePathSafe(assetPath));
+                                      String assetPath) throws IOException {
+        assetPath = stripLeadingSlash(assetPath);
+        final Path docPath = getCachePathForDoc(docId);
+        checkPathIsSafe(docPath, assetPath);
+        return docPath.resolve(assetPath);
     }
 
     /**
      * Returns the path within the asset cache to the metadata (timestamp) about the file.
      */
     private Path getCachePathForMetadata(final String docId,
-                                         final String assetPath) {
-        return getCachePathForDoc(docId).resolve(METADATA_DIR).resolve(makePathSafe(assetPath));
+                                         String assetPath) throws IOException {
+        assetPath = stripLeadingSlash(assetPath);
+        final Path docPath = getCachePathForDoc(docId);
+        final Path metaPath = docPath.resolve(METADATA_DIR);
+        checkPathIsSafe(metaPath, assetPath);
+        return metaPath.resolve(assetPath);
     }
 
     /**
-     * Performs a safe write to file, so if the system crashes half-way through writing
-     * we don't have a corrupted version of the file.
-     * @param filePath The path to the file we want to create.
-     * @param data The data to write to the file. Might be null.
+     * Returns the timestamp of the file in the cache for the given asset.
+     * @param metaPath The path to the meta-file for the asset we're interested in.
+     * @return The timestamp of the file in the cache.
      * @throws IOException If something goes wrong.
      */
-    private void saveDataSafely(final Path filePath, final byte[] data) throws IOException {
-        final Path fileDir = filePath.getParent();
-        Files.createDirectories(fileDir);
-        final Path tempFilePath = Files.createTempFile(fileDir,
-                ASSET_CACHE_TEMP_PREFIX,
-                ASSET_CACHE_TEMP_SUFFIX);
-
-        if (data != null) {
-            Files.write(tempFilePath, data);
+    private Instant getCacheTimestamp(final Path metaPath) throws IOException {
+        Instant cacheTimestamp = Instant.EPOCH;
+        if (metaPath.toFile().exists()) {
+            final String cacheVersion = Files.readString(metaPath);
+            cacheTimestamp = Instant.ofEpochMilli(Long.parseLong(cacheVersion));
         }
-
-        Files.move(tempFilePath,
-                filePath,
-                StandardCopyOption.REPLACE_EXISTING,
-                StandardCopyOption.ATOMIC_MOVE);
+        return cacheTimestamp;
     }
 
     /**
      * Returns an input stream reading from a cached copy of the asset.
      * @param docId The document ID that owns the asset
      * @param assetPath The path of the asset within the owning document
-     * @return InputStream (buffered) that reads the file. Must be closed.
+     * @return InputStream (buffered) that reads the file. Must be closed by the caller.
      * @throws IOException If something goes wrong.
      * @throws PermissionException If something goes wrong.
      */
     private InputStream getInputStreamForAsset(final String docId,
-                                               final String assetPath)
+                                               final String assetPath,
+                                               final Path metaPath,
+                                               final Instant cacheTimestamp)
             throws IOException, PermissionException {
 
         final Path cachedAssetPath = getCachePathForAsset(docId, assetPath);
 
-        // Synchronise to prevent race conditions.
-        // Not the most efficient way to do this but can be optimised if necessary.
-        synchronized (this) {
-            // What timestamp do we have on disk?
-            Instant cacheTimestamp = Instant.EPOCH;
-            final Path metaPath = getCachePathForMetadata(docId, assetPath);
-            if (metaPath.toFile().exists()) {
-                final String metaString = Files.readString(metaPath);
-                cacheTimestamp = Instant.ofEpochMilli(Long.parseLong(metaString));
-            }
+        final Instant dbTimestamp = service.writeLiveToServletCache(
+                ASSET_CACHE_TEMP_PREFIX,
+                ASSET_CACHE_TEMP_SUFFIX,
+                docId,
+                assetPath,
+                cacheTimestamp,
+                cachedAssetPath);
 
-            final Instant dbTimestamp = service.writeLiveToServletCache(
+        if (dbTimestamp != null) {
+            // Cache was updated so write the dbTimestamp to disk
+            FileUtil.saveDataSafely(metaPath,
                     ASSET_CACHE_TEMP_PREFIX,
                     ASSET_CACHE_TEMP_SUFFIX,
-                    docId,
-                    assetPath,
-                    cacheTimestamp,
-                    cachedAssetPath);
-
-            if (dbTimestamp != null) {
-                // Cache was updated so write the dbTimestamp to disk
-                saveDataSafely(metaPath,
-                        Long.toString(dbTimestamp.toEpochMilli()).getBytes(StandardCharsets.UTF_8));
-            }
+                    Long.toString(dbTimestamp.toEpochMilli()).getBytes(StandardCharsets.UTF_8));
         }
 
         // Cached file must exist now and must be up-to-date, so return an InputStream attached to it
         // Note: UNIX allows a valid read from a file that was deleted after we opened it
+        //       as the reference to the file contents keeps the contents in existence.
         // Note: Writing a new version is atomic, so the either old version or new version is always there
         // Note: If the asset doesn't exist then this will throw a FileNotFoundException
         return new BufferedInputStream(new FileInputStream(cachedAssetPath.toFile()));
@@ -197,27 +222,46 @@ public class VisualisationAssetServlet extends HttpServlet implements IsServlet 
      * Called to return an asset via HTTP.
      */
     @Override
-    protected void doGet(final HttpServletRequest request, final HttpServletResponse response) {
+    protected void doGet(final HttpServletRequest request, final HttpServletResponse response) throws IOException {
 
         final DocIdAndPath docIdAndPath = splitIntoDocIdAndPath(request.getPathInfo());
         final String docId = docIdAndPath.docId();
         final String path = docIdAndPath.path();
 
-        try (final InputStream istr = getInputStreamForAsset(docId, path)) {
-            response.setContentType(getMimetype(path));
-            response.setStatus(HttpServletResponse.SC_OK);
-            try (final ServletOutputStream ostr = response.getOutputStream()) {
-                istr.transferTo(ostr);
+        // Lock on the metaPath
+        final Path metaPath = getCachePathForMetadata(docId, path);
+        final Lock lock = locks.get(metaPath);
+        lock.lock();
+        try {
+            final Instant cacheTimestamp = getCacheTimestamp(metaPath);
+            final String cacheVersion = String.valueOf(cacheTimestamp.toEpochMilli());
+
+            // Is the client asking for cache validation?
+            final String etagValid = request.getHeader(ETAG_VALID_HEADER);
+            if (etagValid != null && etagValid.equals(cacheVersion)) {
+                response.setStatus(HttpServletResponse.SC_NOT_MODIFIED);
+            } else {
+                try (final InputStream dataStream = getInputStreamForAsset(docId, path, metaPath, cacheTimestamp)) {
+                    response.setContentType(getMimetype(path));
+                    response.setStatus(HttpServletResponse.SC_OK);
+                    response.setHeader(CACHE_CONTROL_HEADER, CACHE_CONTROL_VALUE_2S);
+                    response.setHeader(ETAG_HEADER, cacheVersion);
+                    try (final ServletOutputStream responseStream = response.getOutputStream()) {
+                        dataStream.transferTo(responseStream);
+                    }
+                } catch (final FileNotFoundException e) {
+                    LOGGER.error("Asset {}/{} does not exist", docId, path);
+                    response.setStatus(HttpServletResponse.SC_NOT_FOUND);
+                } catch (final IOException e) {
+                    LOGGER.error("Error retrieving asset for docId {}, path '{}': {}", docId, path, e.getMessage(), e);
+                    response.setStatus(HttpServletResponse.SC_BAD_REQUEST);
+                } catch (final PermissionException e) {
+                    LOGGER.warn("User does not have permission to view assets");
+                    response.setStatus(HttpServletResponse.SC_FORBIDDEN);
+                }
             }
-        } catch (final FileNotFoundException e) {
-            LOGGER.error("Asset {}/{} does not exist", docId, path);
-            response.setStatus(HttpServletResponse.SC_NOT_FOUND);
-        } catch (final IOException e) {
-            LOGGER.error("Error retrieving asset for docId {}, path '{}': {}", docId, path, e.getMessage(), e);
-            response.setStatus(HttpServletResponse.SC_BAD_REQUEST);
-        } catch (final PermissionException e) {
-            LOGGER.warn("User does not have permission to view assets");
-            response.setStatus(HttpServletResponse.SC_FORBIDDEN);
+        } finally {
+            lock.unlock();
         }
     }
 
@@ -240,9 +284,6 @@ public class VisualisationAssetServlet extends HttpServlet implements IsServlet 
             }
         }
         return new DocIdAndPath(docId, path);
-    }
-
-    private record DocIdAndPath(String docId, String path) {
     }
 
     /**
@@ -353,30 +394,37 @@ public class VisualisationAssetServlet extends HttpServlet implements IsServlet 
     }
 
     /**
-     * Returns a path without a leading slash. Removes multiple leading slashes if necessary.
-     * @param in The path to remove the leading slash from.
-     * @return Safe version of the filename.
+     * Checks that a path is safe and does not escape from the cache.
+     * Throws an exception if an escape is attempted via ../ or / paths.
      */
-    private String makePathSafe(final String in) {
+    private void checkPathIsSafe(final Path baseDir, String in) throws IOException {
+        in = stripLeadingSlash(in);
 
-        // Remove leading slash
-        final String retval = recurseRemoveLeadingSlash(in);
-
-        // Remove any security sensitive strings
-        return retval.replace("..", "__");
+        // Check resolved path is within the baseDir
+        final Path resolvedPath = baseDir.resolve(in).normalize();
+        if (!resolvedPath.startsWith(baseDir)) {
+            LOGGER.error("Illegal path given to Visualisation Asset Servlet: '{}' which resolves to '{}'. "
+            + "Resolved path must start with '{}'",
+                    in, resolvedPath, baseDir);
+            throw new IOException("Illegal path: '" + in + "'");
+        }
     }
 
     /**
-     * Recurse down the path, removing any leading slashes. Must not be null.
-     * @param in The string to sanitise.
-     * @return The input string without any leading slashes.
+     * Strips one leading slash from the input value.
      */
-    private String recurseRemoveLeadingSlash(final String in) {
+    private String stripLeadingSlash(String in) {
         if (in.startsWith("/")) {
-            return recurseRemoveLeadingSlash(in.substring(1));
-        } else {
-            return in;
+            in = in.substring(1);
         }
+
+        return in;
+    }
+
+    /**
+     * Record class to return from parsing the path given in the request from the client.
+     */
+    private record DocIdAndPath(String docId, String path) {
     }
 
 }
